--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,19 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
     // material lib
     def material_version = "1.3.0"
     implementation "com.google.android.material:material:$material_version"
+
+
+    // androidx.fragment
+    def fragment_version = "1.5.0" // must use for new factory stuff
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    implementation "androidx.fragment:fragment:$fragment_version"
+
 
 
 
